# simple-monitoring-agent

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  schema.sql
.github/workflows/: rust.yml
src/: config.rs  cpu.rs  database.rs  fs.rs  hostname.rs  io.rs  load_avg.rs  main.rs  memory.rs  network.rs  nginx.rs  postgres.rs  types.rs
src/docker/: client.rs  metric.rs  mod.rs
