[package]
name = "agent"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = [ "attributes" ] }
custom_error = "1.7.1"