[package]
name = "agent"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = [ "attributes" ] }
custom_error = "1.7.1"
sqlx = { version = "0.2.4", features = [ "postgres", "chrono" ] }
openssl = { version = "0.10.26", features = [ "vendored" ] }
futures = "0.3.1"
chrono = "0.4.10"